--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,12 +9,16 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pino": "^8.18.0",
+    "pino-http": "^9.0.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
     "nodemon": "^3.0.3",
+    "pino-pretty": "^10.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
