--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "@smartpass/angular-node-takehome-common": "workspace:^",
     "express": "^4.18.2",
     "pino": "^8.18.0",
     "pino-http": "^9.0.0",
