--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "pino": "^8.18.0",
     "pino-http": "^9.0.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "ws": "^8.16.0"
   },
   "devDependencies": {
