--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,6 +9,10 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "luxon": "^3.4.4"
   }
 }
