--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "@smartpass/angular-node-takehome-common": "workspace:^",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "pino": "^8.18.0",
     "pino-http": "^9.0.0",
     "sqlite": "^5.1.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
     "nodemon": "^3.0.3",
     "pino-pretty": "^10.3.1",
