--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "pino": "^8.18.0",
     "pino-http": "^9.0.0",
     "sqlite": "^5.1.1",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.202",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.16",
     "nodemon": "^3.0.3",
     "pino-pretty": "^10.3.1",
