--- a/packages/client/angular.json
+++ b/packages/client/angular.json
@@ -36,7 +36,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/purple-green.css",
+              "src/theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -97,7 +97,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/purple-green.css",
+              "src/theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
