--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@smartpass/angular-node-takehome-common": "workspace:^",
     "cors": "^2.8.5",
     "express": "^4.18.2",
